--- a/index.html
+++ b/index.html
@@ -3,3 +3,9 @@
 <img src="poster1.jpg">
 <img src="poster3.jpg">
 <img src="tshirt.jpeg">
+<h1></h1>
+<img src="ig.jpg">
+<h1></h1>
+<img src="in.jpg">
+<h1></h1>
+<img src="wa.jpg">
