--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
-<img src="bnlogo.png">
-<h1>Hello and WELCOME!!</h1>
-<img src="poster1.jpg">
-<img src="poster3.jpg">
-<img src="tshirt.jpeg">
-<h1></h1>
-<img src="ig.jpg">
-<h1></h1>
-<img src="in.jpg">
-<h1></h1>
-<img src="wa.jpg">
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Untitled Document</title>
+	<style>
+		body{
+			margin:0;
+			
+		}
+	</style>
+</head>
+
+<body>
+	
+	
+	
+	<section>
+	
+	<img src="images/bnweb1_03.jpg" alt="" width="100%">
+	</section>
+</body>
+</html>
